[package]
name = "palantir"
version = "0.1.0"
authors = ["Aphosis <aphosis.github@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.7.1"
futures = "0.3.5"
wgpu = "0.6.0"
winit = "0.22.2"
# imgui = "0.4.0"
imgui = {path = "lib/imgui-docking-rs"}
imgui-winit-support = {path = "lib/imgui-docking-rs/imgui-winit-support"}
imgui-wgpu = {path = "lib/imgui-wgpu-rs"}

[build-dependencies]
shaderc = "0.6.2"
failure = "0.1.8"
glob = "0.3.0"
